added api key, waiting for authorization

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <section class="green d-flex flex-column">
                     <section class="purple">
                         <h3>Search For City</h3>
-                        <input><br>
-                        <button type="button">Search</button>
+                        <input id="search-input"><br>
+                        <button id="search-btn" type="button">Search</button>
                     </section>
                     <section class="purple">
                         <ul></ul>
@@ -50,12 +50,9 @@
                     <h3>5-Day Forecast</h3>
 
                     <!-- Flex row for 5 day forecast-->
-                    <section>
-
-                    </section>
+                    <section></section>
 
                 </section>
-
             </section>
 
                 
