started add to list function

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 
                 <!-- Serach For city/List section-->
                 <section class="green d-flex flex-column">
-                    <section class="purple">
-                        <h3>Search For City</h3>
-                        <input id="search-input"><br>
-                        <button id="search-btn" type="button">Search</button>
-                    </section>
-                    <section class="purple">
-                        <ul></ul>
-                    </section>
+                    <h3>Search For City</h3>
+                    <input id="search-input"><br>
+                    <button id="search-btn" type="button">Search</button>
+                </section>
+
+                <!-- List Of City Buttons -->
+                <section class="green d-flex flex-column">
+                    <ul id="city-list" class="d-flex flex-column"></ul>
                 </section>
             </section>
 
