API key authorization recieved, refactor fetch url, begin displaying current date info

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <section class="blue">
                 <!-- Current Day-->
                 <section class="green">
-                    <h3>City (date)</h3>
-                    <p>Temp</p>
-                    <p>Wind</p>
-                    <p>Humidity</p>
+                    <h3 id="today-city-name">City: (date)</h3>
+                    <p id="today-city-temp">Temperature: </p>
+                    <p id="today-city-wind">Wind: </p>
+                    <p id="today-city-humidity">Humidity: </p>
                 </section>
 
                 <!--5 day forecast -->
@@ -54,12 +54,7 @@
 
                 </section>
             </section>
-
-                
-
-
         </main>
-        
     </body>
 
     <!-- Added link to the jQuery library -->
