able to switch between cities button working

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <!-- List Of City Buttons -->
                 <section class="green d-flex flex-column">
-                    <ul id="city-list" class="d-flex flex-column"></ul>
+                    <list id="city-list" class="d-flex flex-column"></list>
                 </section>
             </section>
 
