--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </main>
     </body>
 
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"></script>
     <!-- Added link to the jQuery library -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- My Script -->
