--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <body>
 
         <!-- Display the words "Weather Dashboard"-->
-        <header class="red">
+        <header class="" id="dashboard-banner">
             <h1>Weather Dashboard</h1>
         </header>
 
 
-        <main class="red d-flex">
+        <main class="d-flex">
             <!-- Have a flex row that holds two sections-->
-            <section class="blue">
+            <section class="p-2">
                 
                 <!-- Serach For city/List section-->
-                <section class="green d-flex flex-column">
-                    <h3>Search For City</h3>
-                    <input id="search-input"><br>
+                <section class="seperate-list d-flex flex-column">
+                    <h3>Search For City:</h3>
+                    <input id="search-input">
                     <button id="search-btn" type="button">Search</button>
                 </section>
 
                 <!-- List Of City Buttons -->
-                <section class="green d-flex flex-column">
+                <section class="p-2 d-flex flex-column">
                     <list id="city-list" class="d-flex flex-column"></list>
                 </section>
             </section>
@@ -52,7 +52,43 @@
                     <h3>5-Day Forecast</h3>
 
                     <!-- Flex row for 5 day forecast-->
-                    <section id="5-day-container"></section>
+                    <section id="5-day-container" class="d-flex">
+                        <figure id="day-1" class="forecast-day-container">
+                            <h4 id="day-1-date">Date</h4>
+                            <img src="" id="day-1-icon">
+                            <p id="day-1-temp">Temp:</p>
+                            <p id="day-1-wind">Wind:</p>
+                            <p id="day-1-humidity">Humidity:</p>
+                        </figure>
+                        <figure id="day-2" class="forecast-day-container">
+                            <h4 id="day-2-date">Date</h4>
+                            <img src="" id="day-2-icon">
+                            <p id="day-2-temp">Temp:</p>
+                            <p id="day-2-wind">Wind:</p>
+                            <p id="day-2-humidity">Humidity:</p>
+                        </figure>
+                        <figure id="day-3" class="forecast-day-container">
+                            <h4 id="day-3-date">Date</h4>
+                            <img src="" id="day-3-icon">
+                            <p id="day-3-temp">Temp:</p>
+                            <p id="day-3-wind">Wind:</p>
+                            <p id="day-3-humidity">Humidity:</p>
+                        </figure>
+                        <figure id="day-4" class="forecast-day-container">
+                            <h4 id="day-4-date">Date</h4>
+                            <img src="" id="day-4-icon">
+                            <p id="day-4-temp">Temp:</p>
+                            <p id="day-4-wind">Wind:</p>
+                            <p id="day-4-humidity">Humidity:</p>
+                        </figure>
+                        <figure id="day-5" class="forecast-day-container">
+                            <h4 id="day-5-date">Date</h4>
+                            <img src="" id="day-5-icon">
+                            <p id="day-5-temp">Temp:</p>
+                            <p id="day-5-wind">Wind:</p>
+                            <p id="day-5-humidity">Humidity:</p>
+                        </figure>
+                    </section>
                 </section>
             </section>
 
