starting high/low temp function

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </section>
 
             <!-- Display current day and 5-day forecast section-->
-            <section class="blue">
+            <section class="weather-container">
                 <!-- Current Day-->
-                <section class="green">
+                <section class="current-day">
                     <figure class="d-flex">
                         <h3 id="today-city-name">City: </h3><img src="" id="icon">
                     </figure>
@@ -48,7 +48,7 @@
                 </section>
 
                 <!--5 day forecast -->
-                <section class="green">
+                <section class="">
                     <h3>5-Day Forecast</h3>
 
                     <!-- Flex row for 5 day forecast-->
@@ -91,8 +91,14 @@
                     </section>
                 </section>
             </section>
-
         </main>
+
+        <foother class="d-flex justify-content-center fixed-bottom foot">
+            <figure class="flex-column">
+                <h4>Hailey D. Francis</h4>
+                <a href="https://github.com/hfrancis7" target="_blank">Github</a>
+            </figure>
+        </foother>
     </body>
 
     <!-- DayJS Script -->
