5 day forecast progress, bug on first day appeared after 12AM turn and/or adding humidity to forecast obj. did not push much prior, F

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Current Day-->
                 <section class="current-day">
                     <figure class="d-flex">
-                        <h3 id="today-city-name">City: </h3><img src="" id="icon">
+                        <h3 id="today-city-name">City </h3><img src="" id="icon">
                     </figure>
                     <p id="today-city-temp">Temperature: </p>
                     <p id="today-city-wind">Wind: </p>
@@ -48,45 +48,50 @@
                 </section>
 
                 <!--5 day forecast -->
-                <section class="">
+                <section class="5-day">
                     <h3>5-Day Forecast</h3>
 
                     <!-- Flex row for 5 day forecast-->
                     <section id="5-day-container" class="d-flex">
                         <figure id="day-1" class="forecast-day-container">
-                            <h4 id="day-1-date">Date</h4>
+                            <h4 class="current-forecast-date">Date</h4>
                             <img src="" id="day-1-icon">
-                            <p id="day-1-temp">Temp:</p>
-                            <p id="day-1-wind">Wind:</p>
-                            <p id="day-1-humidity">Humidity:</p>
+                            <p class="high"></p>
+                            <p class="low"></p>
+                            <p class="wind">Average Wind Speed:</p>
+                            <p class="humidity">Average Humidity:</p>
                         </figure>
                         <figure id="day-2" class="forecast-day-container">
-                            <h4 id="day-2-date">Date</h4>
-                            <img src="" id="day-2-icon">
-                            <p id="day-2-temp">Temp:</p>
-                            <p id="day-2-wind">Wind:</p>
-                            <p id="day-2-humidity">Humidity:</p>
+                            <h4 class="current-forecast-date">Date</h4>
+                            <img src="" id="day-1-icon">
+                            <p class="high"></p>
+                            <p class="low"></p>
+                            <p class="wind">Average Wind Speed:</p>
+                            <p class="humidity">Average Humidity:</p>
                         </figure>
                         <figure id="day-3" class="forecast-day-container">
-                            <h4 id="day-3-date">Date</h4>
-                            <img src="" id="day-3-icon">
-                            <p id="day-3-temp">Temp:</p>
-                            <p id="day-3-wind">Wind:</p>
-                            <p id="day-3-humidity">Humidity:</p>
+                            <h4 class="current-forecast-date">Date</h4>
+                            <img src="" id="day-1-icon">
+                            <p class="high"></p>
+                            <p class="low"></p>
+                            <p class="wind">Average Wind Speed:</p>
+                            <p class="humidity">Average Humidity:</p>
                         </figure>
                         <figure id="day-4" class="forecast-day-container">
-                            <h4 id="day-4-date">Date</h4>
-                            <img src="" id="day-4-icon">
-                            <p id="day-4-temp">Temp:</p>
-                            <p id="day-4-wind">Wind:</p>
-                            <p id="day-4-humidity">Humidity:</p>
+                            <h4 class="current-forecast-date">Date</h4>
+                            <img src="" id="day-1-icon">
+                            <p class="high"></p>
+                            <p class="low"></p>
+                            <p class="wind">Average Wind Speed:</p>
+                            <p class="humidity">Average Humidity:</p>
                         </figure>
                         <figure id="day-5" class="forecast-day-container">
-                            <h4 id="day-5-date">Date</h4>
-                            <img src="" id="day-5-icon">
-                            <p id="day-5-temp">Temp:</p>
-                            <p id="day-5-wind">Wind:</p>
-                            <p id="day-5-humidity">Humidity:</p>
+                            <h4 class="current-forecast-date">Date</h4>
+                            <img src="" id="day-1-icon">
+                            <p class="high"></p>
+                            <p class="low"></p>
+                            <p class="wind">Average Wind Speed:</p>
+                            <p class="humidity">Average Humidity:</p>
                         </figure>
                     </section>
                 </section>
