starting media query css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h3>5-Day Forecast</h3>
 
                     <!-- Flex row for 5 day forecast-->
-                    <section id="5-day-container" class="d-flex">
+                    <section id="5-day-container" class="custom-flex">
                         <figure id="day-1" class="forecast-day-container">
                             <h4 class="current-forecast-date">Date</h4>
                             <img src="" id="day-1-icon">
